--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,4 +27,4 @@ jobs:
         with:
           app-name: photo-assistant-webapp   # 👈 must match your Azure App Service name
           publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-          package: ./target/*.jar
+          package: '${{ github.workspace }}/target/*.jar'
